package org.example.se302;

public class Conflict {
}
