package org.example.se302;

public enum ConflictType {
    ROOM_CAPACITY,
    STUDENT_COLLISION,
    ROOM_OVERLAP
}
