@startuml

' =====================
' Domain Layer
' =====================

class Student {
  - studentId : String
  - name : String
  - enrolledCourses : List<Course>
  --
  + enrollInCourse(c: Course)
  + dropCourse(c: Course)
  + getExamSessions() : List<ExamSession>
}

class Course {
  - courseCode : String
  - courseName : String
  - credit : int
  - enrolledStudents : List<Student>
  --
  + addStudent(s: Student)
  + removeStudent(s: Student)
}

class Classroom {
  - roomNumber : String
  - capacity : int
  --
  + isAvailable(dateTime: LocalDateTime) : boolean
}

class ExamRoomAssignment {
  - room : Classroom
  - students : List<Student>
  --
  + addStudent(s: Student)
  + removeStudent(s: Student)
  + getStudentCount() : int
}

class ExamSession {
  - id : String
  - course : Course
  - startDateTime : LocalDateTime
  - durationMinutes : int
  - roomAssignments : List<ExamRoomAssignment>
  --
  + getEndDateTime() : LocalDateTime
  + getAllStudents() : List<Student>
}

class Calendar {
  - examSessions : List<ExamSession>
  --
  + addExamSession(s: ExamSession)
  + removeExamSession(s: ExamSession)
  + getSessionsByDate(d: LocalDate) : List<ExamSession>
  + getSessionsByRoom(r: Classroom) : List<ExamSession>
  + getSessionsByStudent(st: Student) : List<ExamSession>
}

class Conflict {
  - type : ConflictType
  - sessions : List<ExamSession>
  - description : String
}

enum ConflictType {
  ROOM_CAPACITY
  STUDENT_COLLISION
  ROOM_OVERLAP
}

class Constraints {
  - minMinutesBetweenExams : int
  - maxExamsPerDay : int
  - allowedDays : List<DayOfWeek>
  - allowedTimeRanges : List<TimeRange>
  - roomSpecificRules : Map<String, String>
}

' =====================
' Service Layer
' =====================

class SchedulingEngine {
  + generateCalendar(
      students   : List<Student>,
      courses    : List<Course>,
      classrooms : List<Classroom>,
      constraints: Constraints
    ) : Calendar

  + generateAlternatives(
      current     : Calendar,
      constraints : Constraints
    ) : List<Calendar>

  + optimizeConstraints(
      current     : Calendar,
      constraints : Constraints
    ) : Calendar
}

class ConflictDetection {
  + checkRoomCapacity(c: Calendar) : List<Conflict>
  + checkStudentCollision(c: Calendar) : List<Conflict>
  + checkRoomOverlap(c: Calendar) : List<Conflict>
  + detectAllConflicts(c: Calendar) : List<Conflict>
}

' =====================
' Infrastructure Layer
' =====================

class CsvDataLoader {
  + loadStudents(path: String) : List<Student>
  + loadCourses(path: String) : List<Course>
  + loadClassrooms(path: String) : List<Classroom>
  + loadConstraints(path: String) : Constraints
}

class CsvDataWriter {
  + saveCalendar(calendar: Calendar, path: String) : void
}

' =====================
' UI Layer
' =====================

class ExamSchedulerApp {
  + start(primaryStage: Stage) : void
}

class MainController {
  - calendar : Calendar
  - schedulingEngine : SchedulingEngine
  - conflictDetection : ConflictDetection
  - dataLoader : CsvDataLoader
  --
  + initialize() : void
  + onLoadData() : void
  + onGenerateSchedule() : void
  + onShowConflicts() : void
}

class CalendarViewController {
  - calendar : Calendar
  --
  + displayCalendar(c: Calendar) : void
  + highlightConflicts(conflicts: List<Conflict>) : void
}

class CsvImportController {
  - dataLoader : CsvDataLoader
  --
  + importStudents(path: String) : void
  + importCourses(path: String) : void
  + importClassrooms(path: String) : void
  + importConstraints(path: String) : void
}

' =====================
' Relationships (Multiplicity)
' =====================

Student "N" -- "M" Course : enrolled in >
Course "1" *-- "M" ExamSession : exams
ExamSession "1" -- "M" ExamRoomAssignment : consists of >
ExamRoomAssignment "1" -- "1" Classroom : room >
ExamRoomAssignment "N" -- "M" Student : attends >
Calendar "1" -- "M" ExamSession : contains >
Conflict "N" -- "M" ExamSession : between >

SchedulingEngine ..> Calendar
SchedulingEngine ..> Constraints
SchedulingEngine ..> ConflictDetection

ConflictDetection ..> Calendar
ConflictDetection ..> Conflict

CsvDataLoader ..> Student
CsvDataLoader ..> Course
CsvDataLoader ..> Classroom
CsvDataLoader ..> Constraints

CsvDataWriter ..> Calendar

ExamSchedulerApp ..> MainController
MainController ..> SchedulingEngine
MainController ..> ConflictDetection
MainController ..> CsvDataLoader
MainController ..> Calendar
MainController ..> CalendarViewController
MainController ..> CsvImportController
CalendarViewController ..> Calendar
CalendarViewController ..> Conflict
CsvImportController ..> CsvDataLoader

@enduml
